# fastapi_bookshop

./: .gitignore  pyproject.toml
bookshop/src/: .env  main.py
bookshop/src/auth/: auth_token.py
bookshop/src/configurations/: __init__.py  database.py
bookshop/src/models/: base.py  books.py  sellers.py
bookshop/src/routers/: __init__.py
bookshop/src/routers/v1/: auth.py  books.py  sellers.py
bookshop/src/schemas/: __init__.py  books.py  sellers.py
bookshop/src/tests/: conftest.py  examples_data.py  test_books.py  test_sellers.py
